(copy_files# graph/*.{ml,mli})
(copy_files# containers/*.{ml,mli})

(coq.extraction
  (prelude Bsearch)
  (extracted_modules bsearch))

(coq.extraction
  (prelude CycleDetection)
  (extracted_modules cycleDetection))

(coq.extraction
  (prelude Regexp)
  (extracted_modules regexp))

(library (name compelib))
