(copy_files tree/*.{ml,mli,v})
(copy_files# graph/*.{ml,mli})
(copy_files# container/*.{ml,mli})

(coq.extraction
  (prelude Bsearch)
  (extracted_modules bsearch))

(coq.extraction
  (prelude CycleDetection)
  (extracted_modules cycleDetection))

(coq.extraction
  (prelude Regexp)
  (extracted_modules regexp))

(coq.extraction
  (prelude DoublingLca)
  (extracted_modules doublingLca))

(library (name compelib))
